Migrate to native HTML, CSS and JS

--- a/package.json
+++ b/package.json
@@ -12,18 +12,7 @@
   "main": "",
   "keywords": [],
   "dependencies": {},
-  "devDependencies": {
-    "css-loader": "^0.26.1",
-    "extract-text-webpack-plugin": "^1.0.1",
-    "file-loader": "^0.10.0",
-    "html-webpack-plugin": "^2.28.0",
-    "pug": "^2.0.0-beta10",
-    "pug-loader": "^2.3.0",
-    "style-loader": "^0.13.1",
-    "stylus": "^0.54.5",
-    "stylus-loader": "^2.4.0",
-    "webpack": "^2.2.1"
-  },
+  "devDependencies": {},
   "bugs": {
     "url": "https://github.com/VovanR/yes-all-not/issues"
   },
